--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
 
   <body>
-    <!-- MAIN LOGO / NAV -->
+    <!-- main logo / nav -->
     <header>
       <h1><a href="index.html">Sanif Mujawar</a></h1>
       <nav>
@@ -24,7 +24,7 @@
       </nav>
     </header>
 
-    <!-- HERO BANNER -->
+    <!-- hero banner -->
     <section class="hero-banner">
       <div>
         <h2>"Building Reliable Foundations: Empowering SRE and DevOps Excellence"</h2>
@@ -32,7 +32,7 @@
     </section>
 
     <main class="container">
-      <!-- ABOUT ME SECTION-->
+      <!-- about me -->
       <section class="page-section" id="about">
         <h2>About Me</h2>
       </section>
@@ -51,7 +51,7 @@
         </p>
       </section>
 
-      <!-- PORTFOLIO SECTION -->
+      <!-- portfolio container -->
       <section class="page-section" id="work">
         <h2>Work</h2>
       </section>
@@ -61,7 +61,7 @@
           <a href="https://sanifmujawar.github.io/code-refactor/" target="_blank">
             <img
               src="./images/screenshot_horiseon.jpg"
-              alt="portfolio 4"
+              alt="Horiseon Website Screenshot"
               width="500"
               height="400"
             />
@@ -75,7 +75,7 @@
           <a href="http://www.globaljapimports.com/" target="_blank">
             <img
               src="./images/globaljap.png"
-              alt="portfolio 3"
+              alt="Global Jap Imports Website"
               width="500"
               height="200"
             />
@@ -89,7 +89,7 @@
           <a href="https://github.com/sanifmujawar/Hangman.git" target="_blank" >
             <img
               src="images/hangman.png"
-              alt="portfolio 2"
+              alt="The Hangman Game Screenshot"
               width="500"
               height="200"
             />
@@ -103,7 +103,7 @@
           <a href="https://goo.gl/maps/VqT8oqxJbZQYBg7B6" target="_blank">
             <img
               src="images/simplotechsolutions.png"
-              alt="portfolio 1"
+              alt="Simplotech Solutions Screenshot"
               width="500"
               height="200"
             />
@@ -117,7 +117,7 @@
           <a href="http://www.sanifmujawar.com.s3-website-us-east-1.amazonaws.com/">
             <img
               src="images/sanif portfolio.png"
-              alt="portfolio 5"
+              alt="Sanif Mujawar Screenshot"
               width="500"
               height="200"
             />
@@ -129,7 +129,7 @@
         </figure>
       </section>
 
-      <!-- CONTACT SECTION-->
+      <!-- contact -->
       <section class="page-section" id="contact">
         <h2>Contact Me</h2>
       </section>
