Updated index.html and added image files

--- a/index.html
+++ b/index.html
@@ -106,8 +106,40 @@
         <div class="container">
           <div class="row g-5">
             <div class="card col-md-4 col-sm-6 border-0">
+              <a href="https://sanifmujawar.github.io/code-refactor/" target="_blank">
               <img
-                src="./images/02-portfolio-1.jpg"
+                src="./images/Horiseon.png"
+                class="card-img-top"
+                alt="..."
+              />
+            </a>
+              <div class="card-body">
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+
+            <div class="card col-md-4 col-sm-6 border-0">
+              <a href="http://www.globaljapimports.com/" target="_blank">
+              <img
+                src="./images/globaljap.png"
+                class="card-img-top"
+                alt="..."
+              />
+            </a>
+              <div class="card-body">
+                <p class="card-text">
+                  Some quick example text to build on the card title and make up
+                  the bulk of the card's content.
+                </p>
+              </div>
+            </div>
+
+            <div class="card col-md-4 col-sm-6 border-0">
+              <img
+                src="./images/hangman.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -121,7 +153,7 @@
 
             <div class="card col-md-4 col-sm-6 border-0">
               <img
-                src="./images/02-portfolio-2.jpg"
+                src="./images/simplotechsolutions.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -135,7 +167,7 @@
 
             <div class="card col-md-4 col-sm-6 border-0">
               <img
-                src="./images/02-portfolio-3.jpg"
+                src="./images/sanif portfolio.png"
                 class="card-img-top"
                 alt="..."
               />
@@ -149,35 +181,7 @@
 
             <div class="card col-md-4 col-sm-6 border-0">
               <img
-                src="./images/02-portfolio-4.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-              </div>
-            </div>
-
-            <div class="card col-md-4 col-sm-6 border-0">
-              <img
-                src="./images/02-portfolio-5.jpg"
-                class="card-img-top"
-                alt="..."
-              />
-              <div class="card-body">
-                <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
-                </p>
-              </div>
-            </div>
-
-            <div class="card col-md-4 col-sm-6 border-0">
-              <img
-                src="./images/portfolio-6.png"
+                src="./images/portfolio.png"
                 class="card-img-top"
                 alt="..."
               />
