--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="container clearfix">
           <img
             class="col-4 col-sm-3 col-md-2 float-start mb-3 me-3"
-            src="images/sanif1-removebg.pngs"
+            src="images/sanif1-removebg.png"
             alt="profile image"
           />
           <p>
@@ -138,11 +138,13 @@
             </div>
 
             <div class="card col-md-4 col-sm-6 border-0">
+              <a href="https://github.com/sanifmujawar/Hangman.git" target="_blank" >
               <img
                 src="./images/hangman.png"
                 class="card-img-top"
                 alt="..."
               />
+            </a>
               <div class="card-body">
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
@@ -152,11 +154,13 @@
             </div>
 
             <div class="card col-md-4 col-sm-6 border-0">
+              <a href="https://goo.gl/maps/VqT8oqxJbZQYBg7B6" target="_blank">
               <img
                 src="./images/simplotechsolutions.png"
                 class="card-img-top"
                 alt="..."
               />
+            </a>
               <div class="card-body">
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
@@ -166,11 +170,13 @@
             </div>
 
             <div class="card col-md-4 col-sm-6 border-0">
+              <a href="http://www.sanifmujawar.com" target="_blank">
               <img
                 src="./images/sanif portfolio.png"
                 class="card-img-top"
                 alt="..."
               />
+            </a>
               <div class="card-body">
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
@@ -180,11 +186,13 @@
             </div>
 
             <div class="card col-md-4 col-sm-6 border-0">
+              <a href="https://sanifmujawar.github.io/portfolio/" target="_blank">
               <img
                 src="./images/portfolio.png"
                 class="card-img-top"
                 alt="..."
               />
+            </a>
               <div class="card-body">
                 <p class="card-text">
                   Some quick example text to build on the card title and make up
