--- a/index.html
+++ b/index.html
@@ -110,13 +110,12 @@
               <img
                 src="./images/Horiseon.png"
                 class="card-img-top"
-                alt="..."
+                alt="Horiseon"
               />
             </a>
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Horiseon: Driving Digital Growth. Trust Horiseon for innovative solutions that fuel your online success. From web design to strategic marketing, we empower your brand with tailored strategies, boosting visibility and delivering measurable results.
                 </p>
               </div>
             </div>
@@ -126,13 +125,12 @@
               <img
                 src="./images/globaljap.png"
                 class="card-img-top"
-                alt="..."
+                alt="Global Jap Imports"
               />
             </a>
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Global Jap Imports: Embrace Japanese Automotive Excellence. Discover top-quality Japanese vehicles and parts at Global Jap Imports. With a wide range of options, we provide a seamless experience for enthusiasts and businesses alike, unlocking the power of Japanese automotive craftsmanship.
                 </p>
               </div>
             </div>
@@ -142,13 +140,12 @@
               <img
                 src="./images/hangman.png"
                 class="card-img-top"
-                alt="..."
+                alt="The Hangman Game"
               />
             </a>
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  The Hangman Game: Unleash Your Word-Guessing Skills. Dive into the classic Hangman game in Python. Challenge yourself, sharpen your vocabulary, and enjoy a captivating guessing adventure with our user-friendly interface. Test your linguistic prowess and have endless fun with our immersive Python Hangman Game.
                 </p>
               </div>
             </div>
@@ -158,13 +155,12 @@
               <img
                 src="./images/simplotechsolutions.png"
                 class="card-img-top"
-                alt="..."
+                alt="Simplotech Solutions"
               />
             </a>
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Simplotech Solutions: Your IT Solutions Leader. Based in Mumbai, we offer comprehensive IT solutions, prioritizing quality and client satisfaction. Trust us to empower your business in the digital landscape.
                 </p>
               </div>
             </div>
@@ -174,13 +170,12 @@
               <img
                 src="./images/sanif portfolio.png"
                 class="card-img-top"
-                alt="..."
+                alt="Advanced Portfolio Using HTML CSS & Javascript"
               />
             </a>
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  sanifmujawar.com: Showcasing SRE/DevOps Engineering Expertise. Explore sanifmujawar.com to discover Sanif Mujawar's portfolio highlighting extensive experience in implementing robust systems and optimizing infrastructure. Engage with Sanif's expertise in Site Reliability Engineering and DevOps for reliable and efficient tech solutions.
                 </p>
               </div>
             </div>
@@ -190,13 +185,12 @@
               <img
                 src="./images/portfolio.png"
                 class="card-img-top"
-                alt="..."
+                alt="Basic Portfolio Using HTML & CSS"
               />
             </a>
               <div class="card-body">
                 <p class="card-text">
-                  Some quick example text to build on the card title and make up
-                  the bulk of the card's content.
+                  Basic Portfolio: Showcasing HTML and CSS Skills. Explore my portfolio created with HTML and CSS, highlighting my web development expertise. Engage with my work and experience the potential of these technologies in crafting captivating online experiences.
                 </p>
               </div>
             </div>
