--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       name="description"
       content="Sanif Mujawar - Bootstrap portfolio web site"
     />
-    <title>Bootstrap portfolio</title>
+    <title>Sanif Mujawar's Bootstrap Portfolio</title>
     <!-- Bootstrap stylesheet  5-->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
